network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny #this is the name of the network policy
  namespace: crm #in the crm namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress: 
  - ports:
      - protocol: TCP
        port: 53  
      - protocol: UDP
        port: 53
